recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:4: error: unclosed string literal
  "avance(a)
  ^Tree:14: error: unclosed string literal
  "
  ^Tree:4: error: illegal start of statement
  "avance(a)
  ^Tree:14: error: illegal start of statement
  "
  ^